--- a/source/static/about.html
+++ b/source/static/about.html
@@ -18,10 +18,21 @@
 		</header>
 		<!-------------- MAIN ------------------->
 		<main>
-			<div class="start-page">
-				<h1>NeuroBit Dating</h1>
-				<p>Lorem Ipsum</p>
-				<button>Sign Up</button>
+			<div class="about-section">
+				<h1>What is NeuroBit Dating?</h1>
+				<p>NeuroBit Dating is a revolutionary partner finding app that utilizes the BrainBit headset. With a short video, we use the data collected from the headset to find a perfect partner for you.</p>
+			</div>
+			<div class="about-section">
+				<h1>Where can I find the headset?</h1>
+				<p>You can find the BrainBit headset <a href="#">here.</a></p>
+			</div>
+			<div class="about-section">
+				<h1>What kind of videos do you offer?</h1>
+				<p>We offer a large range of videos.</p>
+			</div>
+			<div class="about-section">
+				<h1>Do you sell your data?</h1>
+				<p>Absolutely not.</p>
 			</div>
 		</main>
 		<!-------------- FOOTER ----------------->
