Added bottom section that briefly explains the app

--- a/source/static/index.html
+++ b/source/static/index.html
@@ -23,7 +23,13 @@
 				<p>Lorem Ipsum</p>
 				<button>Sign Up</button>
 			</div>
+			<!-- BODY SECTIONS -->
+			<div class="start-section">
+				<h1>Find partners using your brain</h1>
+				<p>With our revolutionary app, you can easily find your compatible partners just by watching a video!</p>
+			</div>
 		</main>
+		
 		<!-------------- FOOTER ----------------->
 		<footer class="footer">
 			<div class="copy">Preview Only</div>
