Changed the contents of the About page to a list

--- a/source/static/about.html
+++ b/source/static/about.html
@@ -18,22 +18,16 @@
 		</header>
 		<!-------------- MAIN ------------------->
 		<main>
-			<div class="about-section">
-				<h1>What is NeuroBit Dating?</h1>
-				<p>NeuroBit Dating is a revolutionary partner finding app that utilizes the BrainBit headset. With a short video, we use the data collected from the headset to find a perfect partner for you.</p>
-			</div>
-			<div class="about-section">
-				<h1>Where can I find the headset?</h1>
-				<p>You can find the BrainBit headset <a href="#">here.</a></p>
-			</div>
-			<div class="about-section">
-				<h1>What kind of videos do you offer?</h1>
-				<p>We offer a large range of videos.</p>
-			</div>
-			<div class="about-section">
-				<h1>Do you sell your data?</h1>
-				<p>Absolutely not.</p>
-			</div>
+			<ul class="about-qa">
+				<li class="about-q">What is NeuroBit Dating?</li>
+				<li class="about-a">NeuroBit Dating is a revolutionary partner finding app that utilizes the BrainBit headset. With a short video, we use the data collected from the headset to find a perfect partner for you. You can also decide whether to find a partner who shares the same or opposite brain activity as yours.</li>
+				<li class="about-q">Where can I find the headset?</li>
+				<li class="about-a">You can find the BrainBit headset <a href="#">here.</a></li>
+				<li class="about-q">What kind of videos do you offer?</li>
+				<li class="about-a">We offer a large range of videos.</li>
+				<li class="about-q">Do you sell your data?</li>
+				<li class="about-a">Absolutely not.</li>
+			</ul>
 		</main>
 		<!-------------- FOOTER ----------------->
 		<footer class="footer">
