--- a/source/static/profile.html
+++ b/source/static/profile.html
@@ -14,10 +14,24 @@
                 <img src="https://i.stack.imgur.com/34AD2.jpg" alt="John Doe" id="profile-pic" />
             </a>
 		</header>
+		<!------------- SIDEBAR ----------------->
+		<div class="sidebar">
+			<ul>
+				<li><a href="#">Your partners</a></li>
+				<li><a href="#">Suggested partners</a></li>
+				<li><a href="#">Your summary</a></li>
+				<li><a href="#">Help</a></li>
+				<li>
+					<form action="index(sample).html">
+						<input type="submit" id="watch-video-button" value="WATCH VIDEO" />
+					</form>
+				</li>
+			</ul>
+		</div>
 		<!-------------- MAIN ------------------->
-		<main>
-			
-		</main>
+		<div class="profile-content">
+
+		</div>
 		<!-------------- FOOTER ----------------->
 		<!--
         <footer class="footer">
