Added body content to profile page

--- a/source/static/profile.html
+++ b/source/static/profile.html
@@ -21,7 +21,12 @@
 				<li><a href="#">Suggested partners</a></li>
 				<li><a href="#">Your summary</a></li>
 				<li><a href="#">Help</a></li>
-				<li>
+				<li style="margin-top: 0px; margin-bottom: 0px;">
+					<form action="#">
+						<input type="submit" id="watch-video-button" value="VIEW ANALYTICS" />
+					</form>
+				</li>
+				<li style="margin-top: 0px; margin-bottom: 0px;">
 					<form action="index(sample).html">
 						<input type="submit" id="watch-video-button" value="WATCH VIDEO" />
 					</form>
@@ -30,7 +35,12 @@
 		</div>
 		<!-------------- MAIN ------------------->
 		<div class="profile-content">
-
+			<div class="profile-window">
+				<h2>Your partners</h2>
+				<div class="profile-window-content">
+					<p>None at the moment</p>
+				</div>
+			</div>
 		</div>
 		<!-------------- FOOTER ----------------->
 		<!--
