--- a/source/static/signup.html
+++ b/source/static/signup.html
@@ -23,15 +23,15 @@
 					<form method="POST" action="">
 						<h1>Sign Up</h1>
 						<label>First Name</label><br />
-						<input type="text" id="username" name="username" class="textform" /><br />
+						<input type="text" id="firstname" name="firstname" class="textform" /><br />
 						<label>Last Name</label><br />
-						<input type="text" id="username" name="username" class="textform" /><br />
+						<input type="text" id="lastname" name="lastname" class="textform" /><br />
 						<label>Age</label><br />
-						<input type="text" id="username" name="username" class="textform" /><br />
+						<input type="text" id="age" name="age" class="textform" /><br />
 						<label>Email</label><br />
-						<input type="text" id="username" name="username" class="textform" /><br />
+						<input type="text" id="email" name="email" class="textform" /><br />
 						<label>Phone Number</label><br />
-						<input type="text" id="username" name="username" class="textform" /><br />
+						<input type="text" id="phonenumber" name="phonenumber" class="textform" /><br />
 						<label>What gender are you?</label><br />
 						<input type="radio" name="gender" value="male" /><label> Male</label><br />
 						<input type="radio" name="gender" value="female" /><label> Female</label><br />
