Added dropdown for profile icon

--- a/source/static/profile.html
+++ b/source/static/profile.html
@@ -10,9 +10,17 @@
 		<!-------------- HEADER ----------------->
 		<header class="slim-header">
 			<a href="index.html" class="logo">NeuroBit Dating</a>
-			<a href="#" id="profile-pic-hyp">
-                <img src="https://i.stack.imgur.com/34AD2.jpg" alt="John Doe" id="profile-pic" />
-            </a>
+			<div id="profile-dropdown">
+				<a href="javascript:void(0)" id="profile-pic-hyp">
+					<img src="https://i.stack.imgur.com/34AD2.jpg" alt="John Doe" id="profile-pic" />
+				</a>
+				<div id="profile-dropdown-content">
+					<a href="#">My account</a>
+					<a href="#">Options</a>
+					<a href="#">Sign out</a>
+				</div>
+			</div>
+			
 		</header>
 		<!------------- SIDEBAR ----------------->
 		<div class="sidebar">
